--- a/blogicum/templates/base.html
+++ b/blogicum/templates/base.html
@@ -14,7 +14,9 @@
   <body>
     {% include "includes/header.html" %}
     <main>
+    <div class="container py-5">
     {% block main %}{% endblock main %}
+    </div>
     </main>
     {% include "includes/footer.html" %}
   </body>
