--- a/blogicum/templates/blog/category.html
+++ b/blogicum/templates/blog/category.html
@@ -1,7 +1,5 @@
 {% extends "base.html" %}
+{% block title %}Публикации в категории - {{ category }}{% endblock title %}
 {% block main %}
-      <div class="container py-5">
-        <h1>Публикации в категории - {{category}}</h1>   
-      </div>
-    </main>
+        <h1>Публикации в категории - {{ category }}</h1>   
 {% endblock main %}
