--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -1,23 +1,5 @@
 {% extends "base.html" %}
-    <!-- Формируется из локации и даты -->
-  {% block title %}{{post.location}}{% endblock title %}	
-    {% block main %}   
-      <div class="container py-5">
-        <article>
-          <ul>
-            <li>
-              Место: {{ post.location }}             
-            </li>
-            <li>
-              Дата: {{ post.date }}
-            </li>
-            <li>
-              Категория: <a href="{% url "blog:category_posts" post.category %}">{{ post.category }}</a> 
-            </li>
-          </ul>         
-          <p>
-            {{ post.text }}
-          </p>          
-        </article>                
-      </div>
-    {% endblock main %}
+{% block main %}
+  {% include "includes/cycle.html" %}
+{% endblock main %}
+{% block title %}{{post.location}}{% endblock title %}
